--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
+pluginManagement {
+    repositories {
+        // gradlePluginPortal()
+        maven { url = "https://lss233.littleservice.cn/repositories/minecraft" }
+    }
+}
 rootProject.name = 'bserveressentials'
