--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,14 @@
-buildscript {
-    repositories {
-        maven {
-            name = 'forge'
-            url = 'https://maven.minecraftforge.net'
-        }
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:5.1.+'
-    }
+plugins {
+    id 'net.minecraftforge.gradle' version '5.1.16'
+    id 'java'
 }
-
-apply plugin: 'net.minecraftforge.gradle'
 
 group = 'com.example.bserveressentials'
 version = '1.0.0'
 archivesBaseName = 'bserveressentials'
 
-sourceCompatibility = targetCompatibility = '1.8' // or '11' for Java 11
-
 minecraft {
-    version = '1.16.5-36.2.20'
+    version = "1.16.5"
     mappings channel: 'official', version: '1.16.5'
     runs {
         client {
@@ -29,14 +17,6 @@ minecraft {
         server {
             workingDirectory project.file('run')
         }
-    }
-}
-
-repositories {
-    mavenCentral()
-    maven {
-        name = 'forge'
-        url = 'https://maven.minecraftforge.net'
     }
 }
 
