--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+# mirror
+use_mirror = true
+# BMCLAPI is unstable sometimes, use lss233's mirror for alternative.
+mirror_maven_url=bmclapi2.bangbang93.com/maven
+#mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
+#mirror_maven_url=download.mcbbs.net/maven
