--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # mirror
-use_mirror = true
+use_mirror = false
 # BMCLAPI is unstable sometimes, use lss233's mirror for alternative.
 mirror_maven_url=bmclapi2.bangbang93.com/maven
 #mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
